Upgraded RClaim version and fixed all errors